--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=dream-shops
 
 server.port=9193
 
-spring.datasource.url=jdbc:mysql://localhost:3306/dream_shops_db
+spring.datasource.url=jdbc:mysql://localhost:3306/eshops
 spring.datasource.username=root
 spring.datasource.password=AugustaAugusta@00011
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -18,4 +18,5 @@ api.prefix=/api/v1
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
 
